# codec-fixtures

./: .gitignore  Makefile  README.md  fixtures.car
.github/: dependabot.yml
.github/workflows/: automerge.yml  cron.yml  go-check.yml  go-test.yml
_fixtures_src/: float--0.5.dag-cbor  float--8.940696716308594e-8.dag-cbor  float-0.5.dag-cbor  float-8.940696716308594e-8.dag-cbor
_keccak256_fixtures_src/: eth-access-list-tx.eth-tx  eth-dynamic-fee-receipt.eth-tx-receipt  eth-header.eth-block  eth-legacy-receipt.eth-tx-receipt  eth-log-trie-branch-node-with-embedded-log-leaf-and-value.eth-receipt-log-trie  eth-log-trie-extension-node.eth-receipt-log-trie  eth-log.eth-receipt-log  eth-receipt-trie-branch-node-with-embedded-rct-value.eth-tx-receipt-trie  eth-state-account.eth-account-snapshot  eth-state-trie-branch-node.eth-state-trie  eth-state-trie-eoa-leaf-node.eth-state-trie  eth-storage-trie-branch-node-with-embedded-storage-leaf-and-value.eth-storage-trie  eth-tx-trie-branch-node-with-embedded-tx-value.eth-tx-trie  eth-tx-trie-leaf-node.eth-tx-trie
go/: codecs_test.go  fixtures.go  go.mod  go.sum  special_cases.go
js/: .npmrc  codecs.js  hasher.js  make-car.js  make-fixtures.js  make-keccak256-fixtures.js  make-testmark.js  package-lock.json  package.json  test.js  util.js
negative-fixtures/dag-cbor/decode/: duplicate-keys.json
negative-fixtures/dag-json/decode/: duplicate-keys.json
negative-fixtures/dag-pb/decode/: edges.json
negative-fixtures/dag-pb/encode/: basic-datamodel-kinds.json  invalid-forms.json
python/: pyproject.toml  requirements.txt
python/tests/: test_car.py  test_fixtures.py  test_negative_fixtures.py
rust/: Cargo.toml  Cargo_latest_git.toml  latest-git-patched.toml
rust/tests/: codecs.rs  serde.rs  utils.rs
