[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python"
version = "0.0.1"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "multiformats",
    "ipld-dag-pb",
    "pytest",
    "ipld-car",
]
[tool.hatch.build.targets.wheel]
packages = ["python"]
