[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-ipld-dag-pb-test"
version = "0.0.1"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "multiformats",
    "ipld-dag-pb",
    "pytest"
]
