[package]
name = "codec-fixtures"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
hex = "0.4.3"
ipld-core = { version = "0.4.3", features = ["serde"] }
ipld-dagpb = "*"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
serde_ipld_dagcbor = "*"
serde_ipld_dagjson = "*"
thiserror = "2.0.7"
