[package]
name = "codec-fixtures"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
hex = "0.4.3"
ipld-core = { version = "0.4.3", features = ["serde"] }
ipld-dagpb = "0.2.2"
multihash-codetable = { version = "0.2.1", features = ["sha2"] }
serde_ipld_dagcbor = "0.6.4"
serde_ipld_dagjson = "0.2.2"
thiserror = "2.0.7"
